@@ -2,6 +2,7 @@ Changelog as of November 30, 2011:
 == Version 2.0 ==
 * Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
 * Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
+* Updated documentation to clarify `BNS Dynamic Copyright` parameters
 
 /**
  * Internet Browsers Reviewed
